@@ -1,3 +1,9 @@
+Fri Sep 12 22:48:11 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/Event_Handler_T.h:
+
+          . Bug fix where this header was missing an include file.
+
 Fri Sep 12 22:42:11 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Workspace_Generator_T.cpp:
@@ -15,8 +21,8 @@ Thu Sep 11 19:03:51 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/utils/logging/logging.mpc:
 
-    . Fixed build errors related to seperating CIAO from CUTS
-      standard distro on non-Windows systems.
+         . Fixed build errors related to seperating CIAO from CUTS
+           standard distro on non-Windows systems.
 
 Thu Sep 11 05:09:53 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
